# releases

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  nightlies_job.sh
.github/workflows/: nightly.yml  v2_test.yml
plugins/BYOD/: linux_build.sh  mac_build.sh  metadata.json  win_build.sh
plugins/ChowCentaur/: linux_build.sh  mac_build.sh  metadata.json  win_build.sh
plugins/ChowKick/: linux_build.sh  mac_build.sh  metadata.json  win_build.sh
plugins/ChowMatrix/: linux_build.sh  mac_build.sh  metadata.json  win_build.sh
plugins/ChowMultiTool/: linux_build.sh  mac_build.sh  metadata.json  win_build.sh
plugins/ChowPhaser/: linux_build.sh  mac_build.sh  metadata.json  win_build.sh
plugins/ChowTape/: linux_build.sh  mac_build.sh  metadata.json  win_build.sh
